--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
